--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title id="dynamic-title">Portfolio Generator - Create Professional Portfolios Instantly</title>
-    <meta id="dynamic-description" name="description" content="Generate beautiful professional portfolios instantly. Just enter your name and share your portfolio link." />
-    <meta id="dynamic-og-title" property="og:title" content="Portfolio Generator - Create Professional Portfolios Instantly" />
-    <meta id="dynamic-og-description" property="og:description" content="Generate beautiful professional portfolios instantly. Just enter your name and share your portfolio link." />
+    <title id="dynamic-title">Digital Portfolio Maker</title>
+    <meta id="dynamic-description" name="description" content="Create beautiful professional portfolios instantly. Just enter your name and share your portfolio link." />
+    <meta id="dynamic-og-title" property="og:title" content="Digital Portfolio Maker" />
+    <meta id="dynamic-og-description" property="og:description" content="Create beautiful professional portfolios instantly. Just enter your name and share your portfolio link." />
     <meta id="dynamic-og-image" property="og:image" content="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=400" />
     <meta property="og:type" content="website" />
     <meta id="dynamic-og-url" property="og:url" content="" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta id="dynamic-twitter-title" name="twitter:title" content="Portfolio Generator - Create Professional Portfolios Instantly" />
-    <meta id="dynamic-twitter-description" name="twitter:description" content="Generate beautiful professional portfolios instantly. Just enter your name and share your portfolio link." />
+    <meta id="dynamic-twitter-title" name="twitter:title" content="Digital Portfolio Maker" />
+    <meta id="dynamic-twitter-description" name="twitter:description" content="Create beautiful professional portfolios instantly. Just enter your name and share your portfolio link." />
     <meta id="dynamic-twitter-image" name="twitter:image" content="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=400" />
   </head>
   <body>
