Update 3 files: index.html, App.tsx, PortfolioCard.tsx

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph Meta Tags -->
     <meta id="dynamic-og-title" property="og:title" content="Digital Portfolio Maker" />
     <meta id="dynamic-og-description" property="og:description" content="Create beautiful professional portfolios instantly. Just enter your name and share your portfolio link." />
-    <meta id="dynamic-og-image" property="og:image" content="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630" />
+    <meta id="dynamic-og-image" property="og:image" content="https://raw.githubusercontent.com/kamilhussen24/funny-project/refs/heads/main/dist/assets/Image/profile.jpg?auto=compress&cs=tinysrgb&w=1200&h=630" />
     <meta property="og:type" content="website" />
     <meta id="dynamic-og-url" property="og:url" content="" />
     <meta property="og:site_name" content="Digital Portfolio Maker" />
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta id="dynamic-twitter-title" name="twitter:title" content="Digital Portfolio Maker" />
     <meta id="dynamic-twitter-description" name="twitter:description" content="Create beautiful professional portfolios instantly. Just enter your name and share your portfolio link." />
-    <meta id="dynamic-twitter-image" name="twitter:image" content="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=1200&h=630" />
+    <meta id="dynamic-twitter-image" name="twitter:image" content="https://raw.githubusercontent.com/kamilhussen24/funny-project/refs/heads/main/dist/assets/Image/profile.jpg?auto=compress&cs=tinysrgb&w=1200&h=630" />
     
     <!-- Additional Meta Tags for Better Social Sharing -->
     <meta name="author" content="Digital Portfolio Maker" />
